# Wrappex

./: Cargo.toml  README.md
docs/superpowers/plans/: 2026-06-27-wrappex-implementation.md
docs/superpowers/specs/: 2026-06-27-wrappex-design.md
scripts/: install.ps1
src/: app.rs  cli.rs  launch.rs  lib.rs  main.rs  models.rs  profile.rs  ui.rs
tests/: cli_smoke.rs
